@@ -1,3 +1,10 @@
+2006-08-03 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j104-UNSTABLE
+
+ * Higher width for autocomplete fields.
+
+ * Fix: Not all uploadpathes were shown in config wizard
+   Thanks to Kai.
+
 2006-08-02 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j103-UNSTABLE
 
  * Fix: JS warning in ImageMap when no ImageMap is available.
